src/styles/Weather.css
.Weather{
    border:1px solid rgb(227, 225, 225);
    height: 25rem;
    
    margin:0 auto;
    padding: 2em;
}
form {
    display: flex;
    justify-content: space-between;
}
.Weather form input[type=text]{
    width: 80%;
    height: 3em;
    /* border:none; */
    padding-left: 1em;
    /* margin: 0 0  2rem 0; */
}
.Weather form input[type=submit]{
    /* background-color: rgb(34, 181, 222); */
    /* padding: 1em auto; */
    background-color: #CBBBF8;
    color:#000000;
    border-radius: 4px;
    margin: auto 0 auto 1em;
    height: 3em;
    width: 20%;
    border:none;
    font-size: 0.7em;
}
.Weather .weather-summary{
    display: flex;
    justify-content: space-between;
    color:#70757A;
    margin: 3em auto;
}
.Weather .weather-details{
    display: flex;
    font-size: 1rem;
}
 

.Weather .weather-details-phw{
    
    font-size: 0.9rem;
    padding: 1em 0 0 1em;
}

.Weather .part-one{
    text-align: left;
}
.Weather .part-two{
display: flex;
flex-direction: column;
text-align: right;
}
.weather-summary .part-two .city-name{
    color:#222;
    font-size: 1.4rem;
    margin-top: 0;
}
.Weather .weather-summary canvas{
    height: 4em;
    width: 100%;
    
   
}
.Weather .weather-summary .temperature{
    font-size: 3rem;
    margin-left: 0.2em;
    color: #222;
}
.weather-summary .temperature-unit {
   display: flex;
   padding-top: 0.7em;
   margin:0 0.4em;
}
@media (max-width:628px) {
    .Weather{
       
        height: auto;
        padding: 0;
        border: none;
        min-width: 80%;
    }

    .Weather .weather-summary .temperature {
        font-size: 2rem;

    }
    .Weather .weather-details-phw{
        padding-top: 0.7em;
    }
    .Weather .weather-summary canvas{
        height: auto;
    }
    .weather-summary .part-two .city-name{
        font-size: 1em;
    }
}

